--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <title>Final project</title> 
 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/canvas.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/todo.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/canvas.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/todo.css">
 </head>
 <body>
     <nav class="sidebar close">
@@ -143,9 +143,9 @@
             </div>
         </div>
     </section>
-    <script src="/js/script.js"></script>
-    <script src="/js/home.js"></script>
-    <script src="/js/todo.js"></script>
-    <script src="/js/canvas.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/home.js"></script>
+    <script src="./js/todo.js"></script>
+    <script src="./js/canvas.js"></script>
 </body>
 </html>
