remove unused code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="/assest/logo.png" alt="">
+                    <img src="./assest/logo.png" alt="">
                 </span>
                 <div class="text logo-text">
                     <span class="name">My Space</span>
